# FrameworkCSGO

./: .clang-format  .clangd  .gitignore  .gitmodules  Build.sh  CMakeLists.txt  Clean.sh  Debug.sh  HOWTODEBUG.md  LICENSE  Load.sh  ProjectName  README.md  Unload.sh
.github/ISSUE_TEMPLATE/: crash-report.md
.github/workflows/: build.yml
Source/: ConVarStorage.cpp  ConVarStorage.hpp  GUI.cpp  GUI.hpp  GameCache.cpp  GameCache.hpp  Interfaces.cpp  Interfaces.hpp  Main.cpp  Memory.cpp  Memory.hpp  MenuPreview.cpp  Netvars.cpp  Netvars.hpp
Source/Features/: Features.hpp  GUIs.cpp  General.hpp  Legit.hpp  Movement.hpp  Semirage.hpp  Serializers.cpp  Visuals.hpp
Source/Features/General/: EnginePrediction.cpp  EnginePrediction.hpp  EventLog.cpp  EventLog.hpp  General.hpp  Menu.cpp  Menu.hpp  Watermark.cpp  Watermark.hpp
Source/Features/Legit/: Aimbot.cpp  Aimbot.hpp  Bhop.cpp  Bhop.hpp  ESP.cpp  ESP.hpp  Legit.hpp  SpectatorList.cpp  SpectatorList.hpp  Triggerbot.cpp  Triggerbot.hpp
Source/Features/Legit/ESP/: ESP.cpp  ESP.hpp  ESPStructure.hpp
Source/Features/Misc/: AutoAccept.cpp  AutoAccept.hpp  IgnoreSvPure.cpp  IgnoreSvPure.hpp  PartyScripts.cpp  PartyScripts.hpp  VoteRevealer.cpp  VoteRevealer.hpp
Source/Features/Movement/: AutoStrafer.cpp  AutoStrafer.hpp  Bhop.cpp  Bhop.hpp  CrouchJump.cpp  CrouchJump.hpp  EdgeJump.cpp  EdgeJump.hpp  FastDuck.cpp  FastDuck.hpp  HighJump.cpp  HighJump.hpp  JumpBug.cpp  JumpBug.hpp  Movement.hpp
Source/Features/Semirage/: Aimbot.cpp  Aimbot.hpp  Backtrack.cpp  Backtrack.hpp  RecoilAssistance.cpp  RecoilAssistance.hpp  Semirage.hpp
Source/Features/Visuals/: FOV.cpp  FOV.hpp  FlashReduction.cpp  FlashReduction.hpp  Fog.cpp  Fog.hpp  MainMenu.cpp  MainMenu.hpp  NoPunch.cpp  NoPunch.hpp  SpectatorList.cpp  SpectatorList.hpp  Visuals.hpp
Source/Features/Visuals/ESP/: ESP.cpp  ESP.hpp  ESPStructure.hpp
Source/Features/Visuals/Glow/: Glow.cpp  Glow.hpp
Source/GUI/: EventLog.cpp  EventLog.hpp  GUI.cpp  GUI.hpp  ImGuiColors.hpp  ImGuiMacros.hpp
Source/GUI/Construction/: Construction.cpp  Settings.cpp  Settings.hpp
Source/GUI/Construction/Tabs/: ConfigurationTab.cpp  ConfigurationTab.hpp  DebugTab.cpp  DebugTab.hpp  GeneralTab.cpp  LegitTab.cpp  MovementTab.cpp  SemirageTab.cpp
Source/GUI/Construction/Windows/: Configuration.cpp  Configuration.hpp  Debug.hpp
Source/GUI/Elements/: ClickableColorButton.cpp  ClickableColorButton.hpp  HelpMarker.cpp  HelpMarker.hpp  Keybind.cpp  Keybind.hpp  Popup.cpp  Popup.hpp  ShadowString.cpp  ShadowString.hpp
Source/Hooks/: Hooks.cpp  Hooks.hpp
Source/Hooks/CreateMove/: CreateMoveHook.cpp  CreateMoveHook.hpp
Source/Hooks/DX9/: DX9Hook.cpp  DX9Hook.hpp
Source/Hooks/FrameStageNotify/: FrameStageNotifyHook.cpp  FrameStageNotifyHook.hpp
Source/Hooks/Game/: GameFunctions.cpp  GameFunctions.hpp  GameHook.cpp  GameHook.hpp
Source/Hooks/Game/Functions/: CanLoadThirdPartyFiles.cpp  CreateMove.cpp  DoPostScreenEffects.cpp  EmitSound.cpp  FireEvent.cpp  FrameStageNotify.cpp  OverrideView.cpp  SendNetMsg.cpp  ViewDrawFade.cpp
Source/Hooks/GameFunctions/: GameHook.cpp  GameHook.hpp
Source/Hooks/GameFunctions/CreateMove/: CreateMoveHook.cpp  CreateMoveHook.hpp
Source/Hooks/GameFunctions/FrameStageNotify/: FrameStageNotifyHook.cpp  FrameStageNotifyHook.hpp
Source/Hooks/GameFunctions/OverrideView/: OverrideViewHook.cpp  OverrideViewHook.hpp
Source/Hooks/OverrideView/: OverrideViewHook.cpp  OverrideViewHook.hpp
Source/Hooks/SDL/: SDLFunctions.cpp  SDLFunctions.hpp  SDLHook.cpp  SDLHook.hpp
Source/Hooks/SDL/Functions/: DestroyWindow.cpp  PollEvent.cpp  PollEvents.cpp  SetRelativeMouseMode.cpp  SwapWindow.cpp  WarpMouseInWindow.cpp
Source/Hooks/Vulkan/: VulkanHook.cpp  VulkanHook.hpp
Source/SDK/: BoneDefinitions.hpp  CBaseHandle.hpp  CUserCmd.hpp  ClientClass.hpp  ClientClassIDs.hpp  ClientFrameStage.hpp  EntityHandle.hpp  GlowObjectDefinition.hpp  InputFlags.hpp  InterfaceReg.hpp  LifeState.hpp  Matrix3x4.hpp  Matrix4x4.hpp  MoveType.hpp  ObserverMode.hpp  PlayerInfo.hpp  StateFlags.hpp  TeamID.hpp  Vector.hpp  WeaponIDs.hpp  WeaponMode.hpp
Source/SDK/CUtl/: Memory.hpp  Vector.hpp
Source/SDK/Definitions/: Bones.hpp  InputFlags.hpp  LifeState.hpp  NetworkFlows.hpp  StateFlags.hpp
Source/SDK/GameClass/: CBaseAttributableItem.hpp  CBaseCSGrenade.hpp  CBaseCombatWeapon.hpp  CBaseEntity.hpp  CBaseGrenade.hpp  CBasePlayer.hpp  CC4.hpp  CClientEntityList.hpp  CCollideable.hpp  CCollisionProperty.hpp  CDrone.hpp  CDronegun.hpp  CEngineClient.hpp  CFogController.hpp  CGameEvent.hpp  CGlobalVars.hpp  CGlowObjectManager.hpp  CHostage.hpp  CMoveData.hpp  CNetChan.hpp  CPhysPropLootCrate.hpp  CPlantedC4.hpp  CUserCmd.hpp  CViewSetup.hpp  CWeaponCSBase.hpp  ConVar.hpp  IClientNetworkable.hpp  IClientRenderable.hpp  IMaterial.hpp  IMoveHelper.hpp  INetMessage.hpp  Padding.hpp  VirtualMethod.hpp
Source/SDK/GameClass/Entities/: CBaseAttributableItem.hpp  CBaseCSGrenade.hpp  CBaseCombatWeapon.hpp  CBaseEntity.hpp  CBaseGrenade.hpp  CBasePlayer.hpp  CC4.hpp  CDrone.hpp  CDronegun.hpp  CFogController.hpp  CHostage.hpp  (+2 more)
Source/SDK/Math/: BoundingBox.hpp  Matrix3x4.hpp  Matrix4x4.hpp  Vector.hpp
Source/SDK/Model/: ModType.hpp  Model.hpp
Source/SDK/Netvars/: ClientClass.hpp  RecvProp.hpp  RecvTable.hpp
Source/SDK/Raytrace/: Plane.hpp  Ray.hpp  Surface.hpp  Trace.hpp  TraceFilter.hpp  TraceType.hpp
Source/SDK/Weapons/: WeaponIDs.hpp
Source/Serialization/: ConfigurationsGUI.cpp  Serialization.cpp  Serialization.hpp  Serializer.cpp  Serializer.hpp
Source/Serialization/Types/: Bool.cpp  Float.cpp  Int.cpp  Vector.cpp
Source/Utils/: GameMode.cpp  GameMode.hpp  MouseCorrection.cpp  MouseCorrection.hpp  PlayerIds.cpp  PlayerIds.hpp  Prediction.cpp  Prediction.hpp  Projection.cpp  Projection.hpp  Raytrace.cpp  Raytrace.hpp  Recoil.cpp  Recoil.hpp  Trigonometry.cpp  Trigonometry.hpp  VMT.hpp  VisibilityChecker.cpp  VisibilityChecker.hpp  XorString.hpp
Source/Utils/Platform/: CompilerSupport.hpp  FunctionInvoker.hpp
Source/Utils/WeaponConfig/: WeaponClasses.hpp  WeaponConfig.hpp
(+125 files in other folders)
